--- a/permission/build.gradle
+++ b/permission/build.gradle
@@ -1,8 +1,20 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id'maven-publish'
 }
-
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.huxiaobai'
+                artifactId = 'permission'
+                version = '1.0.0'
+            }
+        }
+    }
+}
 android {
     compileSdk 32
 
